# mgn.gfx

./: CMakeLists.txt  README
samples/: CMakeLists.txt  simpleObjStat.d
src/: CMakeLists.txt
src/mgn/gfx/utils/: ObjectReader.d  ObjectStatisticsReader.d
